Fix text alignment in dashboard table

--- a/Clinical-Review-Prototype/app/assets/sass/application.scss
+++ b/Clinical-Review-Prototype/app/assets/sass/application.scss
@@ -51,6 +51,6 @@ table .task-completed {
   float: right;
 }
 
-td:last-child {
+.last-column {
   text-align: right;
 }
